[package]
name = "search-api"
version = "0.1.1"
edition = "2021"
publish = ["crates-io"]
description = "Search Engine Result scraping"
license = "MIT"
authors = ["holmofy"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-scraper = "0.6"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
