[package]
name = "search-api"
version = "0.2.2"
edition = "2024"
publish = ["crates-io"]
description = "Search Engine Result scraping"
license = "MIT"
authors = ["holmofy"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-scraper = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
